Bug 1163064 - Collapse test group chunks down to counts by result and state
This branch aggregates non-failed jobs within groups and shows the counts of each result/state within.
A ``+`` precedes each count to indicate that's what it is.

A few points of interest:
* Clicking any group or count will expand or collapse the group.  This choice is
remembered as jobs are updated and filters are changed.  Page reload resets it.
* Clicking on the ``( + )`` and ``( - )`` buttons will toggle groups expanded/collapsed
globally.  This is persisted in the URL.  Clicking this button will reset any group
expand/collapse state that was set individually.
* Failed Unclassified jobs are never put into "counts".  They show as top-level
jobs and are still hit with the ``n`` and ``p`` hot keys, etc.

Also fixes:
* Bug 1191454 - classifying 3 jobs, one selected, then clicking "n" for next will go to the first
* Bug 1191487 - Re-scroll selected job into view during chunk expand/collapse

This reverts commit 2e6b7b56c669c519f9ebe5ddcf65f895dabdfa41.

--- a/ui/css/treeherder.css
+++ b/ui/css/treeherder.css
@@ -594,6 +594,11 @@ th-watched-repo {
     display: block;
 }
 
+.group-state-nav-icon {
+    width: 7px;
+    display: inline-block;
+}
+
 .job-group {
     margin: 0 -3px 0 3px;
 }
@@ -606,8 +611,49 @@ th-watched-repo {
   display: none;
 }
 
+.group-btn {
+  background: transparent;
+  padding: 0 2px 0 2px;
+  vertical-align: 0;
+  line-height: 1.32;
+  cursor: pointer;
+}
+.group-btn::before {
+    content: "+";
+}
+
+.group-symbol:hover {
+    background-color: rgba(208, 228, 250, 0.51);
+    cursor: pointer;
+}
+
+.group-content {
+    margin-left: -3px;
+    cursor: pointer;
+}
+
+.group-content::before {
+    content: "("
+}
+
+.group-content::after {
+    content: ")"
+}
+
+.group-count-list:hover {
+    background-color: rgba(208, 228, 250, 0.51);
+}
+
+.group-job-list {
+    margin-left: -3px;
+}
+
 .selected-job {
     border: 4px solid;
+    background-color: #fff;
+}
+
+.selected-count.btn-lg-xform {
     background-color: #fff;
 }
 
@@ -1255,7 +1301,14 @@ ul.failure-summary-list li .btn-xs {
  .job-btn.btn-ltgray,
  .job-btn.btn-green,
  .job-btn.btn-dkblue,
- .job-btn.btn-pink {
+ .job-btn.btn-yellow,
+ .job-btn.btn-pink,
+ .group-btn.btn-dkgray-count,
+ .group-btn.btn-ltgray-count,
+ .group-btn.btn-green-count,
+ .group-btn.btn-dkblue-count,
+ .group-btn.btn-yellow-count,
+ .group-btn.btn-pink-count {
     margin: 0 -5px 0 -1px;
  }
 
@@ -1264,6 +1317,29 @@ ul.failure-summary-list li .btn-xs {
  .job-btn.btn-purple {
     margin: 0 -3px 1px 0;
  }
+
+.btn-orange-classified::after,
+.btn-orange-classified-count::after,
+.btn-red-classified::after,
+.btn-red-classified-count::after,
+.btn-black-classified::after,
+.btn-black-classified-count::after,
+.btn-green-classified::after,
+.btn-green-classified-count::after,
+.btn-dkblue-classified::after,
+.btn-dkblue-classified-count::after,
+.btn-dkgray-classified::after,
+.btn-dkgray-classified-count::after,
+.btn-ltgray-classified::after,
+.btn-ltgray-classified-count::after,
+.btn-yellow-classified::after,
+.btn-yellow-classified-count::after,
+.btn-pink-classified::after,
+.btn-pink-classified-count::after,
+.btn-purple-classified::after,
+.btn-purple-classified-count::after {
+    content: "*";
+}
 
 .btn-view-nav {
   background-color: transparent;
@@ -1402,7 +1478,8 @@ fieldset[disabled] .btn-orange.active {
   border-color: #dd6602;
 }
 
-.btn-orange-classified {
+.btn-orange-classified,
+.btn-orange-classified-count {
   color: #dd6602;
 }
 .btn-orange-classified:hover,
@@ -1459,7 +1536,8 @@ fieldset[disabled] .btn-red.active {
   border-color: #c2020e;
 }
 
-.btn-red-classified {
+.btn-red-classified,
+.btn-red-classified-count {
   color: #90010a;
 }
 .btn-red-classified:hover,
@@ -1487,7 +1565,10 @@ fieldset[disabled] .btn-red-classified.active {
   color: white;
 }
 
-.btn-dkblue {
+.btn-dkblue,
+.btn-dkblue-count,
+.btn-dkblue-classified,
+.btn-dkblue-classified-count {
   color: #283aa2;
   font-weight: bold;
 }
@@ -1516,7 +1597,10 @@ fieldset[disabled] .btn-dkblue.active {
   border-color: #2d48d6;
 }
 
-.btn-green {
+.btn-green,
+.btn-green-count,
+.btn-green-classified,
+.btn-green-classified-count {
   color: rgba(2, 130, 51, 0.75);
   font-weight: bold;
 }
@@ -1543,7 +1627,8 @@ fieldset[disabled] .btn-green.active {
   border-color: #02c238;
 }
 
-.btn-purple {
+.btn-purple
+.btn-purple-count {
   background-color: #9a7da6;
   border-color: #6f0296;
   color: white;
@@ -1573,7 +1658,8 @@ fieldset[disabled] .btn-purple.active {
   color: white;
 }
 
-.btn-purple-classified {
+.btn-purple-classified,
+.btn-purple-classified-count {
   color: #6f0296;
 }
 .btn-purple-classified:hover,
@@ -1601,7 +1687,10 @@ fieldset[disabled] .btn-purple-classified.active {
   color: white;
 }
 
-.btn-yellow {
+.btn-yellow,
+.btn-yellow-count,
+.btn-yellow-classified,
+.btn-yellow-classified-count {
   color: #cdce1d;
   font-weight: bold;
 }
@@ -1627,7 +1716,10 @@ fieldset[disabled] .btn-yellow.active {
   border-color: #cdce1d;
 }
 
-.btn-ltgray {
+.btn-ltgray,
+.btn-ltgray-count,
+.btn-ltgray-classified,
+.btn-ltgray-classified-count {
   color: #e0e0e0;
 }
 .btn-ltgray:hover,
@@ -1653,7 +1745,11 @@ fieldset[disabled] .btn-ltgray.active {
   border-color: #e0e0e0;
 }
 
-.btn-mdgray {
+.btn-mdgray,
+.btn-mdgray-count,
+.btn-mdgray-classified,
+.btn-mdgray-classified-count
+ {
   background-color: #bfbfbf;
   border-color: #bfbfbf;
 }
@@ -1700,7 +1796,10 @@ fieldset[disabled] .btn-resultset:hover {
   color: white;
 }
 
-.btn-dkgray {
+.btn-dkgray,
+.btn-dkgray-count,
+.btn-dkgray-classified,
+.btn-dkgray-classified-count {
   color: #7c7a7d;
 }
 .btn-dkgray:hover,
@@ -1728,7 +1827,10 @@ fieldset[disabled] .btn-dkgray.active {
   color: white;
 }
 
-.btn-black {
+.btn-black
+.btn-black-count,
+.btn-black-classified,
+.btn-black-classified-count {
   background-color: #4a4a4a;
   border-color: #000000;
   color: white;
@@ -1781,7 +1883,10 @@ fieldset[disabled] .btn-black.active {
   border-color: #000000;
 }
 
-.btn-pink {
+.btn-pink
+.btn-pink-count,
+.btn-pink-classified,
+.btn-pink-classified-count {
   color: #ff40d9;
   font-weight: bold;
 }
